--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#services" class="menu-btn">Experience</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
 				 <li><a href="#projects" class="menu-btn">Portfolio</a></li>
-                <li><a href="#teams" class="menu-btn">Certifications</a></li>
+                <li><a href="#certification" class="menu-btn">Certifications</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
