--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Designer, BDD-Specflow(Gherkin language).</p>
                             <span>Data Analysis Libraries</span>
                             <span>65%</span>
                         </div>
-                        <div class="line da-lib"></div>
+                        <div class="line dalib"></div>
                     </div>
 					<div class="bars">
                         <div class="info">
