--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="icon-bar">
     <!--  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> --> 
-    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
+    <a href="#" class="twitter"><i class="fa fa-instagram"></i></a> 
     <!--  <a href="#" class="google"><i class="fa fa-google"></i></a> --> 
     <a href="https://in.linkedin.com/in/dharaneeshraj" class="linkedin"><i class="fa fa-linkedin"></i></a>
     <a href="https://github.com/dharaneeshraju" class="youtube"><i class="fa fa-github"></i></a> 
@@ -66,7 +66,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/11.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Dharaneesh and I'm <span class="typing-2"></span></div>
