--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="https://www.instagram.com/dharaneesh_raj/?utm_medium=copy_link" class="twitter"><i class="fa fa-instagram"></i></a> 
     <!--  <a href="#" class="google"><i class="fa fa-google"></i></a> --> 
     <a href="https://in.linkedin.com/in/dharaneeshraj" class="linkedin"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/dharaneeshraju" class="youtube"><i class="fa fa-github"></i></a> 
+    <a href="https://github.com/dharaneesh-s" class="youtube"><i class="fa fa-github"></i></a> 
     </div>
 	
 	
