--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/11.png" alt="">
+                    <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Dharaneesh and I'm <span class="typing-2"></span></div>
