--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Designer, BDD-Specflow(Gherkin language).</p>
 		<div class="item">
           <div class="left">
             <div class="img">
-              <img src="./images/z1.png" alt="">
+              <img src="./images/z1.jpg" alt="">
             </div>
           </div>
           <div class="right">
