--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="column right">
                     <div class="text">I'm Dharaneesh and I'm <span class="typing-2"></span></div>
                     <p>I am from a vibrant tiny rural area near Erode, Tamil Nadu, in India.  I was raised by my grandparents in the village and guided by my godparents, who live in Phoenix, Arizona, USA. I had the opportunity to enjoy the simple pleasures of village life and exposure to urban lifestyle and technological advances. I have completed my bachelor's degree in computer science and engineering at MCET, Pollachi and currently I am working as a Systems Engineer at Infosys Limited, Chennai.</p>
-					<a href="https://drive.google.com/file/d/14-qSXmCom2TK9wFf22t6t1XjwHmF2SBw/view?usp=drivesdk" download>Download CV</a>
+					<a href="" download>Download CV</a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                         <div class="text">Uniq Technologies Intern</div>
                         <p>Supported the development of various mobile applications, gaining in-depth knowledge of the software development 
 lifecycles during completion of summer internship.</p>
-						<!-- <a href="https://drive.google.com/file/d/14-qSXmCom2TK9wFf22t6t1XjwHmF2SBw/view?usp=drivesdk" download>Download Project</a> -->
+						
                     </div>
                 </div>
                 <div class="card">
