--- a/index.html
+++ b/index.html
@@ -381,13 +381,13 @@ Designer, BDD-Specflow(Gherkin language).</p>
                                 <div class="sub-title">Dharaneesh</div>
                             </div>
                         </div>
-                        <div class="row">
+                      <!----  <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
                                 <div class="sub-title">1/51, Olapalayam, Erode, TN 638-107, India</div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
