--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Perseverance is not a long race; it is many short races one after the other<span>Goals.</span></a></div>
+            <div class="logo"><a href="#">Perseverance is not a long race; <span>It is many short races one after the other</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
