--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Dharaneesh and I'm <span class="typing-2"></span></div>
-                    <p>I am from a vibrant tiny rural area near Erode, Tamil Nadu, in India.  I was raised by my grandparents in the village and guided by my godparents, who live in Phoenix, Arizona, USA. I had the opportunity to enjoy the simple pleasures of village life and exposure to urban lifestyle and technological advances. I have completed my bachelor's degree in computer science and engineering at MCET, Pollachi and currently I am working as a Systems Engineer at Infosys Limited, Chennai.</p>
+                    <p>II am from a vibrant tiny rural area near Erode, Tamil Nadu, India. I was raised by my grandparents in the village and guided by my godparents, who live in Phoenix, Arizona, USA. I had the opportunity to enjoy the simple pleasures of village life and exposure to urban lifestyle and technological advances. I have completed my bachelor's degree in computer science and engineering at MCET, Pollachi, and I worked as a Systems Engineer at Infosys Limited, Chennai. Currently, I am pursuing my Master's degree in Information Systems focused on Business intelligence and analytics at the University of Utah</p>
 					<a href="" download>Download CV</a>
                 </div>
             </div>
